<resources>
    <string name="app_name">Fitness For Diabetics</string>
    <string name="warning">Warning</string>
    <string name="only_for_testing_purposes">ONLY FOR TESTING PURPOSES!</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="bedtime">Bedtime</string>
    <string name="before">before</string>
    <string name="after">after</string>
    <string name="insulin_injection">Insulin injection</string>
    <string name="rapidinsulin">rapid</string>
    <string name="longinsulin">long</string>
    <string name="glycemia">Glycemia</string>
    <string name="extra_injection">Extra injection</string>
    <string name="enter_meal_description">enter meal description here</string>
    <string name="workouts">Workouts</string>
    <string name="enter_your_workout_here">Enter your workout here</string>
    <string name="notes">Notes</string>
    <string name="enter_your_notes_here">Enter your notes here</string>
    <string name="blank_day_bg">#bbbbbb</string>
    <string name="edited_day_bg">#ffffff</string>
    <string name="save_changes">Save changes</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="stay_on_this_page">Stay on this page</string>
    <string name="discard_changes">Discard changes</string>
    <string name="error_saving_to_the_db">Error saving to the DB!</string>
    <string name="please_insert_a_valid_number">The number you typed is probably incorrect. Please insert a valid number.</string>
    <string name="alert_dialog_title_unsaved_changes">You have unsaved changes on this page. Do you want to save changes before going back?</string>
    <string name="hypoglycemia">Hypoglycemia</string>
    <string name="hyperglycemia">Hyperglycemia</string>
    <string name="hypohyperglycemia">Hypo-Hypergl.</string>
    <string name="food_info_finder">Food Info Finder</string>
    <string name="search_food_hint">Search for food to find its nutritional values</string>
    <string name="search_food_hint_short">Find food nutrition values</string>
    <string name="results">Results</string>
    <string name="check_connectivity">Please check your Internet connectivity</string>
    <string name="glycemic_index_header">Glycemic index:\u0020</string>
    <string name="gi_min_header">G.I. Min:\u0020</string>
    <string name="gi_max_header">G.I. Max:\u0020</string>
    <string name="gi_average_header">G.I. Average:\u0020</string>
    <string name="glycemic_index_results">Glycemic Index results</string>
    <string name="food_item">Food Item</string>
    <string name="glycemic_trends">Glycemic Trends</string>
    <string name="before_breakfast_abbrv">B.Bkfst</string>
    <string name="after_breakfast_abbrv">A.Bkfst</string>
    <string name="before_lunch_abbrv">B.Lunch</string>
    <string name="after_lunch_abbrv">A.Lunch</string>
    <string name="before_dinner_abbrv">B.Dinner</string>
    <string name="after_dinner_abbrv">A.Dinner</string>
    <string name="glycemia_header">Glycemia:\u0020</string>

    <integer name="low_glycemia_threshold">70</integer>
    <integer name="high_glycemia_threshold">200</integer>
    <string name="add_widget">Add widget</string>
    <string name="rapidacting_extrainjection">Rapid-acting Insulin\n(extra injection)</string>
    <string name="long_acting">Long-acting Insulin</string>
    <string name="rapid_acting">Rapid-acting Insulin</string>
    <string name="after_dinner">After dinner</string>
    <string name="lastest_glycemia_header">Latest glycemia:\u0020</string>
    <string name="latest_injection_header">Latest Injection:\u0020</string>
    <string name="kcal_header">Kcal:\u0020</string>
    <string name="carbs_header">Carbs:\u0020</string>
    <string name="proteins_header">Proteins:\u0020</string>
    <string name="fat_header">Fat:\u0020</string>
    <string name="nutrition_facts_for_100gr">Nutrition facts for 100gr</string>
    <string name="grams_abbrv">g</string>
    <string name="g_i_legend">G.I. = Glycemic index</string>
    <string name="no_glycemic_data">No glycemic data found</string>
    <string name="before_dinner">Before dinner</string>
    <string name="after_lunch">After lunch</string>
    <string name="before_lunch">Before lunch</string>
    <string name="after_breakfast">After breakfast</string>
    <string name="before_breakfast">Before breakfast</string>
    <string name="no_injections_found">No injections data found</string>
    <string name="units">IU</string>
    <string name="on__for_dates">on</string>  <!--for example "on" 1 July 2018-->
    <string name="at__for_time_of_day">at</string>
    <string name="glycemic_data">Glycemic data</string>
    <string name="loading">loading…</string>
    <string name="disclaimer_title">Disclaimer and Terms of Service</string>
    <string name="disclaimer_body">This app and its content are for informational purposes only. The content is not intended to be a substitute for professional medical advice, diagnosis or treatment. Always seek the advice of your physician or other qualified health provider with any questions you may have regarding a medical condition. Never disregard professional medical advice or delay in seeking it because of something you have read in this app.\n\nIf you think you may have a medical emergency, call your doctor, go to the emergency department, or call 911 immediately.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_body">No personal identifiable data is collected or transferred outside of the user device.\nAll glycemic data as well as data related to insulin injections is stored only locally on the user device.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="my_therapy">My Therapy</string>
    <string name="rapid_insulin_dosage">Rapid Insuling Dosage</string>
    <string name="long_insulin_dosage">Long Insulin Dosage</string>
    <string name="long_acting_insulin_hint">e.g. Lantus</string>
    <string name="rapid_insulin_hint">e.g. NovoRapid</string>
    <string name="accept">Accept</string>
    <string name="background">background</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="cardio">Cardio</string>
    <string name="weights">Weights</string>
    <string name="set_random_data">Set random data☢</string>
    <string name="delete_everything">Delete everything☢</string>
    <string name="loss_of_data_overwrite">WARNING! This option will OVERWRITE the local database with random data. Only for testing purposes. Are you sure?</string>
    <string name="loss_of_data_delete">WARNING! This option will completely DELETE the local database. Only for testing purposes. Are you sure?</string>
    <string name="overwrite_text">OVERWRITE database with random data</string>
    <string name="delete_text">DELETE database</string>
    <string name="cancel">Cancel</string>
    <string name="empty_widget_text">No glycemic data found\n\nNo injections data found</string>
    <string name="not_enough_chart_data">Not enough data to display</string>
    <string name="error_retrieving_data">Error retrieving data for this day</string>


</resources>
