<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/food_info"
        android:title="@string/food_info_finder"
        app:showAsAction="never" />
    <item
        android:id="@+id/glycemic_trends"
        android:title="@string/glycemic_trends"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_therapy"
        android:title="@string/my_therapy"
        app:showAsAction="never" />
    <item
        android:id="@+id/terms_of_service"
        android:title="@string/terms_of_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/populate_db_with_random_data"
        android:title="@string/set_random_data"
        app:showAsAction="never" />

</menu>