<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appwidget_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:padding="@dimen/widget_margin">


    <ImageView
        android:id="@+id/appwidget_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:contentDescription=""
        android:scaleType="centerCrop"
        android:src="@drawable/jogging"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/widget_margin"
        android:background="@color/transparent"
        android:contentDescription="@string/glycemic_data"
        android:text="@string/loading"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/appwidget_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/transparent"
        android:contentDescription="@string/app_name"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

</RelativeLayout>