<?xml version="1.0" encoding="utf-8"?><!-- INCLUDED BY activity_day_detail.xml -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detail_bedtime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bedtime"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toStartOf="@id/detail_bedtime_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/detail_bedtime_glycemia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/glycemia"
        android:textAlignment="center"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_bedtime_extrainjection"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@id/detail_bedtime_glycemia_et"/>


    <EditText
        android:id="@+id/detail_bedtime_glycemia_et"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="@dimen/headline_size"
        app:layout_constraintEnd_toEndOf="@id/detail_bedtime_glycemia"
        app:layout_constraintStart_toStartOf="@id/detail_bedtime_glycemia"
        app:layout_constraintTop_toTopOf="@id/detail_bedtime_extrarapid_injected_et" />

    <TextView
        android:id="@+id/detail_bedtime_extrainjection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/extra_injection"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toStartOf="@id/detail_bedtime_glycemia"
        app:layout_constraintStart_toStartOf="@id/detail_bedtime_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@id/detail_bedtime_extrarapid_injected_et"/>

    <TextView
        android:id="@+id/detail_bedtime_extrainjectionrapid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/rapidinsulin"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toEndOf="@id/detail_bedtime_extrainjection"
        app:layout_constraintStart_toStartOf="@id/detail_bedtime_extrainjection"
        app:layout_constraintTop_toBottomOf="@id/detail_bedtime_extrainjection" />

    <EditText
        android:id="@+id/detail_bedtime_extrarapid_injected_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="3"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="@dimen/headline_size"
        app:layout_constraintEnd_toEndOf="@id/detail_bedtime_extrainjectionrapid"
        app:layout_constraintStart_toStartOf="@id/detail_bedtime_extrainjectionrapid"
        app:layout_constraintTop_toBottomOf="@id/detail_bedtime_extrainjectionrapid" />


    <android.support.constraint.Guideline
        android:id="@+id/detail_bedtime_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.4" />
</android.support.constraint.ConstraintLayout>